# opentera-libraries

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.cfg  setup.py
clients/common/src/: BaseComManager.cpp  BaseComManager.h  CMakeLists.txt  UploadingFile.cpp  UploadingFile.h
clients/device/src/: CMakeLists.txt  DeviceComManager.cpp  DeviceComManager.h  DeviceWebApi.h
cpp/: CMakeLists.txt  DeviceClient.cpp  DeviceClient.h
cpp/clients/: CMakeLists.txt
cpp/clients/common/src/: BaseComManager.h
cpp/clients/user/src/: CMakeLists.txt  FileDownloader.cpp  FileDownloader.h  QNetworkReplyWrapper.cpp  QNetworkReplyWrapper.h  UserClient.cpp  UserClient.h  UserComManager.cpp  UserComManager.h  UserWebAPI.cpp  UserWebAPI.h  UserWebSocketManager.cpp  UserWebSocketManager.h
python/common/: BaseComManager.py
python/device/: DeviceComManager.py
python/opentera_libraries/: create_conda_venv.bat  create_conda_venv.sh  requirements.txt
python/opentera_libraries/common/: BaseComManager.py  Constants.py
python/opentera_libraries/device/: DeviceAPI.py  DeviceComManager.py
python/opentera_libraries/tests/: test_DeviceComManager.py  test_UserComManager.py
python/opentera_libraries/user/: UserAPI.py  UserComManager.py
python/tests/: BaseTest.py  test_DeviceComManager.py
python/user/: UserAPI.py  UserComManager.py
