[metadata]
name = opentera-libraries
version = 0.0.1
author= Simon Brière, Dominic Létourneau
author_email= simon.briere@usherbrooke.ca, dominic.letourneau@usherbrooke.ca
description = Client libraries to interact with OpenTera
requires_python = >=3.11
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: Apache Software License,
    Operating System :: OS Independent


[options]
packages = find:
package_dir=
    =python

zip_safe = True
include_package_data = True
